[package]
name = "ruuvitag-listener"
description = "Print RuuviTag measurements in Telegraf compatible format"
version = "0.5.5"
license = "MIT"
authors = ["Ville Lautanala <lautis@gmail.com>"]
repository = "https://github.com/lautis/ruuvitag-listener"
keywords = ["ruuvi", "ruuvitag", "telegraf"]
edition = "2021"

[dependencies]
btleplug = { git = "https://github.com/sooda/btleplug", branch = "0.5.6-sooda" }
ruuvi-sensor-protocol = "0.5.*"
clap = { version = "3.*", features = ["derive"] }

[profile.release]
opt-level = "s"
lto = true
panic = "abort"
strip = "debuginfo"
