[package]
name = "ruuvitag-listener"
description = "Print RuuviTag measurements in Telegraf compatible format"
version = "0.6.1"
license = "MIT"
authors = ["Ville Lautanala <lautis@gmail.com>"]
repository = "https://github.com/lautis/ruuvitag-listener"
keywords = ["ruuvi", "ruuvitag", "telegraf"]
edition = "2024"

[dependencies]
bluer = { version = "0.17", features = ["bluetoothd"] }
ruuvi-decoders = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
futures = "0.3"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
opt-level = "s"
lto = true
panic = "abort"
strip = "debuginfo"
