[package]
name = "ruuvitag-listener"
description = "Print RuuviTag measurements in Telegraf compatible format"
version = "0.7.0"
license = "MIT"
authors = ["Ville Lautanala <lautis@gmail.com>"]
repository = "https://github.com/lautis/ruuvitag-listener"
keywords = ["ruuvi", "ruuvitag", "telegraf"]
edition = "2024"

[features]
default = ["bluer", "hci"]
bluer = ["dep:bluer", "dep:futures"]
hci = ["dep:libc", "tokio/net"]

[dependencies]
bluer = { version = "0.17", features = ["bluetoothd"], optional = true }
libc = { version = "0.2", optional = true }
ruuvi-decoders = "1.0"
tokio = { version = "1", features = ["rt", "macros", "sync"] }
futures = { version = "0.3", optional = true }
clap = { version = "4", features = ["derive"] }
thiserror = "2"

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"
tokio = { version = "1", features = ["rt-multi-thread"] }

[[bench]]
name = "pipeline"
harness = false

[[bench]]
name = "formatter"
harness = false

[profile.release]
opt-level = "s"
lto = true
panic = "abort"
strip = "debuginfo"
